--- a/html/assets/css/xpoge.css
+++ b/html/assets/css/xpoge.css
@@ -3659,9 +3659,6 @@ a.btn.btn-color.small.btn-filter.me-3.mb-20 {
 }
 
 
-.nl-popup-main {
-	display: none;
-}
 
 
 
